@@ -1,4 +1,13 @@
 2005-09-13 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	* src/Dialog_Filesystems.cc: fixed a11y thingy (#316108)
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc,
+	  include/Dialog_Disklabel.h,
+	  src/Dialog_Disklabel.cc,
+	  src/Win_GParted.cc : get labeltypes from libparted instead of hardcoding them,
+	  also changed some text (#315979)
+
+2005-09-13 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	* lots of stuff and cleanups, including fixing getting used/unused space of hfs/hfs+/fat16/fat32
 	* also fixes bug #161362
 	
